# BE/Laravel/app/Http/Controllers/Api/CommentController.php
@@ -8,6 +8,8 @@ use App\Models\Comment;
 use App\Models\Post;
 use App\Models\User;
 use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Validator;
+
 /**
  * @OA\Post(
  *     path="/api/comments/{PostId}",
@@ -31,6 +33,44 @@ use Illuminate\Http\Request;
  *     @OA\Response(response=400,description="Không thể comment"),
  *     @OA\Response(response=404,description="Không tồn tại bài viết"),
  *     @OA\Response(response=502,description="Không tồn tại bình luận đã phản hồi trong bài viết này"),
+ * ),
+  * @OA\Delete(
+ *     path="/api/del-comment/{commentId?}",
+ *     tags={"Comment"},
+ *     summary="Xoá comment",
+ *     description="Xoá cmt theo Id",
+*    @OA\RequestBody(
+ *         @OA\JsonContent(
+ *             allOf = {
+ *                  @OA\Schema(
+ *                      @OA\Property(property="commentId",type="interger"),
+ *                      example={"commentId":"Id bài post"}
+ *                  )
+ *              }
+ *         )
+ *     ),
+ *     @OA\Response(response=200,description="Deleted successfully"),
+ *     @OA\Response(response=403,description="Không có quyền xoá"),
+ *     @OA\Response(response=404,description="Không tồn tại comment"),
+ * ),
+  * @OA\Put(
+ *     path="/api/edit-comment/{commentId?}",
+ *     tags={"Comment"},
+ *     summary="Sửa comment",
+ *     description="Sửa cmt theo Id",
+*    @OA\RequestBody(
+ *         @OA\JsonContent(
+ *             allOf = {
+ *                  @OA\Schema(
+ *                      @OA\Property(property="commentId",type="interger"),
+ *                      example={"commentId":"Id bài post"}
+ *                  )
+ *              }
+ *         )
+ *     ),
+ *     @OA\Response(response=200,description="Modified successfully"),
+ *     @OA\Response(response=403,description="Không có quyền sửa"),
+ *     @OA\Response(response=404,description="Không tồn tại comment"),
  * ),
  * @OA\Post(
  *     path="/api/get-comment/{PostId}",
@@ -83,8 +123,8 @@ class CommentController extends Controller
             }
             $comment -> save();
             // $content = $request -> content;
-            // 
-            event(new CommentPublished($comment)); // Tạo event khi comment thành công 
+            //
+            event(new CommentPublished($comment)); // Tạo event khi comment thành công
             return response()->json([
                 'status' => 200,
                 'message' => 'Bình luận thành công',
@@ -112,6 +152,64 @@ class CommentController extends Controller
                'status' => 404,
                'data_comment' => false,
                'message' => 'Không tìm thấy bài viết này'
+            ]);
+        }
+    }
+    public function editComment(Request $request){
+        $validator = Validator::make($request->all(), [
+            'commentId' => 'required',
+            'Content' => 'required'
+        ]);
+        if($validator -> fails()){
+            return response()->json([
+                'error' => $validator->errors()
+            ]);
+        }else{
+            $user = User::where('Token',explode(' ',$request->header('Authorization'))[1]) -> first();
+            $comment = Comment::where('Id',$request -> commentId) -> first();
+            if($comment){
+                if($comment -> UserId == $user -> Id){
+                    $comment -> Content = $request -> Content;
+                    $comment -> save();
+                    return response()->json([
+                    'status' => 200,
+                    'message' => 'Sửa bình luận thành công',
+                    'content_modified' => $comment-> Content
+                    ]);
+                }else{
+                    return response()->json([
+                    'status' => 403,
+                    'message' => 'Bạn không có quyền sửa bình luận này'
+                    ]);
+                }
+            }else{
+                return response()->json([
+                'status' => 404,
+                'message' => 'Bình luận không tồn tại'
+                ]);
+            }
+        }
+    }
+    public function deleteComment(Request $request){
+        $user = User::where('Token',explode(' ',$request->header('Authorization'))[1]) -> first();
+        $comment = Comment::where('Id',$request -> commentId) -> first();
+        if($comment){
+            if($comment -> UserId == $user-> Id){
+                $comment -> delete();
+                return response()->json([
+                   'status' => 200,
+                   'message' => 'Xóa bình luận thành công'
+                ]);
+            }else{
+                return response()->json([
+                   'status' => 403,
+                   'message' => 'Bạn không có quyền xóa bình luận này'
+                ]);
+            }
+        }else{
+            return response()->json([
+               'status' => 404,
+               'message' => 'Bình luận không tồn tại'
             ]);
         }
     }
